recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:9: error: too many arguments for method hexaKoch: (levels: Int, length: Double)Unit
		hexaKoch(levels-1, length * 0,14)
                        ^